c/imgproc_helper.h

void Watershed(Mat src, Mat markers );
int FloodFill(  Mat 	image,
                Mat 	mask,
                Point 	seedPoint,
                Scalar 	newVal,
                Rect 	rect,
                Scalar 	loDiff,
                Scalar 	upDiff,
                int 	flags 
                );
struct Contours FindContoursWithHier(Mat src, Hierarchy **chierarchy, int mode, int method);
void Canny2(Mat dx, Mat dy, Mat edges, double threshold1, double threshold2, bool L2gradient);
Mat GetStructuringElementWithAnchor(int shape, Size ksize, Point anchor);
void DrawContours2(
            Mat image,
            Contours contours,
            int contourIdx,
            Scalar color,
            int thickness,
            int lineType,
            Hierarchy hierarchy,
            int maxLevel,
            Point offset);
struct Points ConvexHull2(Contour points, bool clockwise);
struct IntVector ConvexHull3(Contour points, bool clockwise);
void CalcHist1(Mat images, int nimages, int* channels,
    Mat mask, Mat hist, int dims, int* histSize, const float** ranges, bool uniform, bool accumulate);
void CalcHist2(Mat dst, Mat mask, Mat hist, int* histSize);
void Rectangle2(Mat img, Point pt1, Point pt2, Scalar color, int thickness, int lineType, int shift);