source/opencvd/imgproc.d

/*
Copyright (c) 2019 Ferhat Kurtulmuş
Boost Software License - Version 1.0 - August 17th, 2003
Permission is hereby granted, free of charge, to any person or organization
obtaining a copy of the software and accompanying documentation covered by
this license (the "Software") to use, reproduce, display, distribute,
execute, and transmit the Software, and to prepare derivative works of the
Software, and to permit third-parties to whom the Software is furnished to
do so, all subject to the following:
The copyright notices in the Software and this entire statement, including
the above license grant, this restriction and the following disclaimer,
must be included in all copies of the Software, in whole or in part, and
all derivative works of the Software, unless such copies or derivative
works are solely in the form of machine-executable object code generated by
a source language processor.
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE, TITLE AND NON-INFRINGEMENT. IN NO EVENT
SHALL THE COPYRIGHT HOLDERS OR ANYONE DISTRIBUTING THE SOFTWARE BE LIABLE
FOR ANY DAMAGES OR OTHER LIABILITY, WHETHER IN CONTRACT, TORT OR OTHERWISE,
ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
DEALINGS IN THE SOFTWARE.
*/

module opencvd.imgproc;

import std.stdio;
import std.string;
import std.typecons;
import core.stdc.stdlib;

import opencvd.cvcore;

private {
    extern (C){
        double ArcLength(Contour curve, bool is_closed);
        Contour ApproxPolyDP(Contour curve, double epsilon, bool closed);
        void CvtColor(Mat src, Mat dst, int code);
        void EqualizeHist(Mat src, Mat dst);
        void CalcHist(Mats mats, IntVector chans, Mat mask, Mat hist, IntVector sz, FloatVector rng, bool acc);
        void CalcHist1(Mat dst, int nimages, int* channels,
            Mat mask, Mat hist, int dims, int* histSize, const float** ranges, bool uniform, bool accumulate);
        void CalcHist2(Mat dst, Mat mask, Mat hist, int* histSize);
        void ConvexHull(Contour points, Mat hull, bool clockwise, bool returnPoints);
        Points ConvexHull2(Contour points, bool clockwise);
        IntVector ConvexHull3(Contour points, bool clockwise);
        void ConvexityDefects(Contour points, Mat hull, Mat result);
        void BilateralFilter(Mat src, Mat dst, int d, double sc, double ss);
        void Blur(Mat src, Mat dst, Size ps);
        void BoxFilter(Mat src, Mat dst, int ddepth, Size ps);
        void SqBoxFilter(Mat src, Mat dst, int ddepth, Size ps);
        void Dilate(Mat src, Mat dst, Mat kernel);
        void Erode(Mat src, Mat dst, Mat kernel);
        void MatchTemplate(Mat image, Mat templ, Mat result, int method, Mat mask);
        Moment Moments(Mat src, bool binaryImage);
        void PyrDown(Mat src, Mat dst, Size dstsize, int borderType);
        void PyrUp(Mat src, Mat dst, Size dstsize, int borderType);
        Rect BoundingRect(Contour con);
        void BoxPoints(RotatedRect rect, Mat boxPts);
        double ContourArea(Contour con);
        RotatedRect MinAreaRect(Points points);
        void MinEnclosingCircle(Points points, Point2f* center, float* radius);
        Contours FindContours(Mat src, int mode, int method);
        Contours FindContoursWithHier(Mat src, Hierarchy **chierarchy, int mode, int method);
        int ConnectedComponents(Mat src, Mat dst, int connectivity, int ltype, int ccltype);
        int ConnectedComponentsWithStats(Mat src, Mat labels, Mat stats, Mat centroids, int connectivity, int ltype, int ccltype);

        void GaussianBlur(Mat src, Mat dst, Size ps, double sX, double sY, int bt);
        void Laplacian(Mat src, Mat dst, int dDepth, int kSize, double scale, double delta, int borderType);
        void Scharr(Mat src, Mat dst, int dDepth, int dx, int dy, double scale, double delta,
                    int borderType);
        Mat GetStructuringElement(int shape, Size ksize);
        Mat GetStructuringElementWithAnchor(int shape, Size ksize, Point anchor);
        void MorphologyEx(Mat src, Mat dst, int op, Mat kernel);
        void MedianBlur(Mat src, Mat dst, int ksize);
        
        void Canny(Mat src, Mat edges, double t1, double t2);
        void Canny2(Mat dx, Mat dy, Mat edges, double threshold1, double threshold2, bool L2gradient);
        void CornerSubPix(Mat img, Mat corners, Size winSize, Size zeroZone, TermCriteria criteria);
        void GoodFeaturesToTrack(Mat img, Mat corners, int maxCorners, double quality, double minDist);
        void HoughCircles(Mat src, Mat circles, int method, double dp, double minDist);
        void HoughCirclesWithParams(Mat src, Mat circles, int method, double dp, double minDist,
                                    double param1, double param2, int minRadius, int maxRadius);
        void HoughLines(Mat src, Mat lines, double rho, double theta, int threshold);
        void HoughLinesP(Mat src, Mat lines, double rho, double theta, int threshold);
        void HoughLinesPWithParams(Mat src, Mat lines, double rho, double theta, int threshold, double minLineLength, double maxLineGap);
        void HoughLinesPointSet(Mat points, Mat lines, int lines_max, int threshold,
                                double min_rho, double  max_rho, double rho_step,
                                double min_theta, double max_theta, double theta_step);
        void Threshold(Mat src, Mat dst, double thresh, double maxvalue, int typ);
        void AdaptiveThreshold(Mat src, Mat dst, double maxValue, int adaptiveTyp, int typ, int blockSize,
                               double c);
                               
        void ArrowedLine(Mat img, Point pt1, Point pt2, Scalar color, int thickness);
        void Circle(Mat img, Point center, int radius, Scalar color, int thickness);
        void Ellipse(Mat img, Point center, Point axes, double angle, double
                     startAngle, double endAngle, Scalar color, int thickness);
        void Line(Mat img, Point pt1, Point pt2, Scalar color, int thickness);
        void Rectangle(Mat img, Rect rect, Scalar color, int thickness);
        void Rectangle2(Mat img, Point pt1, Point pt2, Scalar color, int thickness, int lineType, int shift);
        void FillPoly(Mat img, Contours points, Scalar color);
        Size GetTextSize(const char* text, int fontFace, double fontScale, int thickness);
        void PutText(Mat img, const char* text, Point org, int fontFace, double fontScale,
                     Scalar color, int thickness);
        void Resize(Mat src, Mat dst, Size sz, double fx, double fy, int interp);
        Mat GetRotationMatrix2D(Point center, double angle, double scale);
        void WarpAffine(Mat src, Mat dst, Mat rot_mat, Size dsize);
        void WarpAffineWithParams(Mat src, Mat dst, Mat rot_mat, Size dsize, int flags, int borderMode,
                                  Scalar borderValue);
        void WarpPerspective(Mat src, Mat dst, Mat m, Size dsize);
        void ApplyColorMap(Mat src, Mat dst, int colormap);
        void ApplyCustomColorMap(Mat src, Mat dst, Mat colormap);
        Mat GetPerspectiveTransform(Contour src, Contour dst);
        void DrawContours(Mat src, Contours contours, int contourIdx, Scalar color, int thickness);
        void DrawContours2(
            Mat image,
            Contours contours,
            int contourIdx,
            Scalar color,
            int thickness,
            int lineType,
            Hierarchy hierarchy,
            int maxLevel,
            Point offset
        );
        void Sobel(Mat src, Mat dst, int ddepth, int dx, int dy, int ksize, double scale, double delta, int borderType);
        void SpatialGradient(Mat src, Mat dx, Mat dy, int ksize, int borderType);
        void Remap(Mat src, Mat dst, Mat map1, Mat map2, int interpolation, int borderMode, Scalar borderValue);
        void Filter2D(Mat src, Mat dst, int ddepth, Mat kernel, Point anchor, double delta, int borderType);
        void SepFilter2D(Mat src, Mat dst, int ddepth, Mat kernelX, Mat kernelY, Point anchor, double delta, int borderType);
        void LogPolar(Mat src, Mat dst, Point center, double m, int flags);
        void FitLine(Contour points, Mat line, int distType, double param, double reps, double aeps);
        CLAHE CLAHE_Create();
        CLAHE CLAHE_CreateWithParams(double clipLimit, Size tileGridSize);
        void CLAHE_Close(CLAHE c);
        void CLAHE_Apply(CLAHE c, Mat src, Mat dst);
        
        void Watershed(Mat src, Mat markers);
        int FloodFill(Mat image, Mat mask, Point seedPoint, Scalar  newVal,
                Rect rect, Scalar loDiff, Scalar upDiff, int flags);
    }
}
double arcLength(Contour curve, bool is_closed){
    return ArcLength(curve, is_closed);
}

Contour approxPolyDP(Contour curve, double epsilon, bool isClosed){
    return ApproxPolyDP(curve, epsilon, isClosed);
}

void cvtColor(Mat src, Mat dst, int code){
    CvtColor(src, dst, code);
}

void equalizeHist(Mat src, Mat dst){
    EqualizeHist(src, dst);
}

void calcHist(Mats mats, IntVector chans, Mat mask, Mat hist, IntVector sz, FloatVector rng, bool acc){
    CalcHist(mats, chans, mask, hist, sz, rng, acc);
}

void calcHist(Mat images, int nimages, int[] channels,
            Mat mask, Mat hist, int dims, int[] histSize, float[][2] _ranges, bool uniform = true, bool accumulate = false){
    
    float*[] __ranges = new float*[channels.length];
    
    foreach(i; 0..channels.length){
        float[] rng = [_ranges[i][0], _ranges[i][1]];
        __ranges[i] = rng.ptr;
    }
    
    CalcHist1(images, nimages, channels.ptr, mask, hist, dims, histSize.ptr, cast(const float**)__ranges, uniform, accumulate);
}

void calcHist(Mat dst, Mat mask, Mat hist, int* histSize){
    CalcHist2(dst, mask, hist, histSize);
}

void convexHull(Contour points, Mat hull, bool clockwise, bool returnPoints){
    ConvexHull(points, hull, clockwise, returnPoints);
}

Points convexHull(Contour points, bool clockwise = true){
    return ConvexHull2(points, clockwise);
}

IntVector convexHullIdx(Contour points, bool clockwise = true){
    return ConvexHull3(points, clockwise);
}

void convexityDefects(Contour points, Mat hull, Mat result){
    ConvexityDefects(points, hull, result);
}

void bilateralFilter(Mat src, Mat dst, int d, double sc, double ss){
    BilateralFilter(src, dst, d, sc, ss);
}

void blur(Mat src, Mat dst, Size ps){
    Blur(src, dst, ps);
}

void boxFilter(Mat src, Mat dst, int ddepth, Size ps){
    BoxFilter(src, dst, ddepth, ps);
}

void sqBoxFilter(Mat src, Mat dst, int ddepth, Size ps){
    SqBoxFilter(src, dst, ddepth, ps);
}

void dilate(Mat src, Mat dst, Mat kernel){
    Dilate(src, dst, kernel);
}

void erode(Mat src, Mat dst, Mat kernel){
    Erode(src, dst, kernel);
}

void matchTemplate(Mat image, Mat templ, Mat result, int method, Mat mask){
    MatchTemplate(image, templ, result, method, mask);
}

Moment moments(Mat src, bool isBinaryImage){
    return Moments(src, isBinaryImage);
}

void pyrDown(Mat src, Mat dst, Size dstsize, int borderType){
    PyrDown(src, dst, dstsize, borderType);
}

void pyrUp(Mat src, Mat dst, Size dstsize, int borderType){
    PyrUp(src, dst, dstsize, borderType);
}

Rect boundingRect(Contour con){
    return BoundingRect(con);
}

void boxPoints(RotatedRect rect, Mat boxPts){
    BoxPoints(rect, boxPts);
}

double contourArea(Contour con){
    return ContourArea(con);
}

RotatedRect minAreaRect(Points points){
    return MinAreaRect(points);
}
void minEnclosingCircle(Points points, Point2f* center, float* radius){
    MinEnclosingCircle(points, center, radius);
}

// enum cv::RetrievalModes for findContours
enum: int {
    RETR_EXTERNAL,
    RETR_LIST,
    RETR_CCOMP,
    RETR_TREE,
    RETR_FLOODFILL
}
